Implemented functionality to add contacts to different groups

--- a/views/home.erb
+++ b/views/home.erb
@@ -2,7 +2,7 @@
 <ul>
   <% @groups.each do |current_group| %>
     <li>
-      <a href="/groups/<%= current_group[:name] %>"><%= current_group[:name] %></a>
+      <a href="/groups/<%= current_group[:name] %>/contacts"><%= current_group[:name] %></a>
     </li>
   <% end %>
 </ul>
