Implemented functionality to edit group names

--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -11,3 +11,4 @@
 </ul>
 
 <a href="/groups/<%= params[:group] %>/new_contact">Add contact</a>
+<a href="/groups/<%= params[:group] %>/edit">Edit group</a>
