Added functionality to edit contact information. Implemented tests for editing group contact info functionality

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -1,3 +1,4 @@
 <h3><%= params[:contact] %>'s Contact Info</h3>
 <p>Email: <%= @contact_info[:email] %></p>
 <p>Cellphone: <%= @contact_info[:cellphone] %></p>
+<a href="../contacts/<%= params[:contact] %>/edit">Edit contact</a>
